--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dm-control>=1.0.31",
+    "numpy>=2.3.1",
+    "tqdm>=4.67.1",
+    "tyro>=0.9.26",
 ]
 
 [tool.ruff]
