Add Docker args for GPUs and shared memory.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,7 @@
   "name": "uv",
   "build": { "dockerfile": "Dockerfile" },
   "remoteUser": "root",
+  "runArgs": ["--gpus", "all", "--shm-size", "1gb"],
   "containerEnv": {
     "SHELL": "/bin/zsh"
   },
