--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ dependencies = [
     "distrax>=0.1.5",
     "dm-control>=1.0.31",
     "flax>=0.10.7",
+    "gymnasium>=1.2.0",
+    "imageio>=2.37.0",
     "jax[cuda12]>=0.6.2",
+    "minari[all]>=0.5.3",
     "numpy>=2.3.1",
     "optax>=0.2.5",
+    "pillow>=11.3.0",
     "tqdm>=4.67.1",
     "tyro>=0.9.26",
 ]
