--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "flax>=0.10.7",
     "gymnasium>=1.2.0",
     "imageio>=2.37.0",
-    "jax[cuda12]>=0.6.2",
+    "jax[cuda12]<0.7.0",
     "minari[all]>=0.5.3",
     "numpy>=2.3.1",
     "optax>=0.2.5",
